프로젝트 jsp생성

--- a/pom.xml
+++ b/pom.xml
@@ -60,10 +60,10 @@
 		</dependency>
 		-->
 		<!-- Spring Security -->
-		<dependency>
+<!-- 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
-		</dependency>
+		</dependency> -->
 		<!-- JSP Security Tag -->
 		<dependency>
 			<groupId>org.springframework.security</groupId>
