회원가입 검증

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -74,3 +74,14 @@ app.download.base=D:/gdshop/
 ## 요청시 파일 경로(image등 link 경로)
 app.upload.base=file:///gdshop/
 app.url.path=/file/**
+
+
+################### Message 설정 
+## message 파일의 위치와 이름 -> 폴더명/파일명 
+spring.messages.basename=messages/message
+## Encoding
+spring.messages.encoding=UTF-8
+## message(key)가 없는 경우
+spring.messages.use-code-as-default-message=true
+### true  : 예외를 발생 시키지 않고 key를 출력
+### false : 예외를 발생
