--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -67,7 +67,7 @@ spring.servlet.multipart.max-request-size=1000GB
 app.item=D:/gdshop/item/
 app.profile=D:/gdshop/profile/
 app.notice=D:/gdshop/notice/
-
+app.purchase=D:/gdshop/purchase/
 ## fileDown, CustomView(FileDownloadView)
 app.download.base=D:/gdshop/
 
