프로필 사진 변경

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -65,7 +65,7 @@ spring.servlet.multipart.max-request-size=1000GB
 ### 저장 폴더
 ## Upload 경로
 app.item=D:/gdshop/item/
-app.profile=D:/gdshop/profile/
+app.profile=C:/gdshop/profile/
 app.notice=D:/gdshop/notice/
 
 ## fileDown, CustomView(FileDownloadView)
@@ -85,3 +85,6 @@ spring.messages.encoding=UTF-8
 spring.messages.use-code-as-default-message=true
 ### true  : 예외를 발생 시키지 않고 key를 출력
 ### false : 예외를 발생
+
+
+
