--- a/src/main/resources/messages/message.properties
+++ b/src/main/resources/messages/message.properties
@@ -1,6 +1,6 @@
 NotBlank.memberVO.id=ID는 필수 입니다.
-NotBlank.memberVO.pw=비밀번호 입력은 필수입니다.
 NotBlank.memberVO.name=이름을 입력해주세요.
+Size.memberVO.pw={2}~{1}자리 비밀번호를 입력하세요.
 Range.memberVO.yy=[연도] 1900~2022년으로 기재
 Range.memberVO.mm=[월] 1~12월 선택
 Range.memberVO.dd=[일자] 1~31일로 기재
