follow여부 확인_ocr

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -70,6 +70,7 @@ app.notice=D:/gdshop/notice/
 
 ## 하준
 app.purchase=D:/gdshop/purchase/
+app.follow=D:/gdshop/follow/
 ## fileDown, CustomView(FileDownloadView)
 app.download.base=D:/gdshop/
 
