내정보 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -64,12 +64,12 @@ spring.servlet.multipart.max-request-size=1000GB
 
 ### 저장 폴더
 ## Upload 경로
-app.item=D:/gdshop/item/
+app.item=C:/gdshop/item/
 app.profile=C:/gdshop/profile/
-app.notice=D:/gdshop/notice/
+app.notice=C:/gdshop/notice/
 
 ## fileDown, CustomView(FileDownloadView)
-app.download.base=D:/gdshop/
+app.download.base=C:/gdshop/
 
 ## 요청시 파일 경로(image등 link 경로)
 app.upload.base=file:///gdshop/
