--- a/pom.xml
+++ b/pom.xml
@@ -80,10 +80,10 @@
 		</dependency>
 		-->
 		<!-- Spring Security -->
-<!-- 		<dependency>
+ 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
-		</dependency> -->
+		</dependency>
 		<!-- 	
 		<dependency>
 			<groupId>org.springframework.security</groupId>
