--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,18 @@
 		<java.version>11</java.version>
 	</properties>
 	<dependencies>
-	
+		
+		<!-- 웹소캣 -->
+		<dependency>
+		  <groupId>com.googlecode.json-simple</groupId>
+		  <artifactId>json-simple</artifactId>
+		  <version>1.1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
+		
 		<!-- 메일전송 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
