--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,17 +18,17 @@ spring.mvc.log-request-details=true
 
 
 ### SQL LOG
-logging.level.jdbc=OFF
-logging.level.jdbc.sqlonly=OFF           
-logging.level.jdbc.sqltiming=DEBUG       
-logging.level.jdbc.audit=OFF             
-logging.level.jdbc.resultset=OFF         
-logging.level.jdbc.resultsettable=DEBUG  
-logging.level.jdbc.connection=OFF            
-#logging.level.org.hibernate.SQL=DEBUG
-#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-logging.level.com.zaxxer.hikari=OFF
-logging.level.javax.sql.DataSource=INFO
+#logging.level.jdbc=OFF
+#logging.level.jdbc.sqlonly=OFF           
+#logging.level.jdbc.sqltiming=DEBUG       
+#logging.level.jdbc.audit=OFF             
+#logging.level.jdbc.resultset=OFF         
+#logging.level.jdbc.resultsettable=DEBUG  
+#logging.level.jdbc.connection=OFF            
+##logging.level.org.hibernate.SQL=DEBUG
+##logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+#logging.level.com.zaxxer.hikari=OFF
+#logging.level.javax.sql.DataSource=INFO
 
 
 ########################## MyBatis 설정 ##########################
