--- a/pom.xml
+++ b/pom.xml
@@ -18,11 +18,17 @@
 	</properties>
 	<dependencies>
 		
+		<!-- 카톡알림 API -->
+	    <dependency>
+	         <groupId>net.nurigo</groupId>
+	         <artifactId>sdk</artifactId>
+	         <version>4.2.7</version>
+	    </dependency>
 		<!-- 웹소캣 -->
 		<dependency>
-		  <groupId>com.googlecode.json-simple</groupId>
-		  <artifactId>json-simple</artifactId>
-		  <version>1.1.1</version>
+			 <groupId>com.googlecode.json-simple</groupId>
+			 <artifactId>json-simple</artifactId>
+			 <version>1.1.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
